@@ -126,6 +126,7 @@ public:
 protected:
     int			m_iFDC; //>>> FDC [BlueSonicBoy]
     int			m_iPreview; //>>> PreviewIndicator [WiZaRd]
+	int			m_iHealthIndex; //>>> Health Indicator File Availability [WiZaRd]
     CImageList  m_ImageList;
     CTitleMenu	m_PrioMenu;
     CTitleMenu	m_FileMenu;
