@@ -205,4 +205,7 @@ Legend:    + added    ~ changed    - removed    ! fixed    > updated
 ! fixed crash on automatic extraction - thx to satanius [WiZaRd]
 
 XXXXYYZZ:
+> updated miniupnplib support to v1.8 (03/05/2013) [Tuxman/WiZaRd]
 ! fixed duplicated badguy icons caused by modicons - thx to SS1900 [WiZaRd]
+! fixed kMule version display in stats [WiZaRd]
++ added file availability (health) display - original by Morph4u (?) [WiZaRd]
